--- a/reddit-pve-6-rails.yaml
+++ b/reddit-pve-6-rails.yaml
@@ -659,7 +659,7 @@ lines:
         name: "South by Southwest"
         direction: west
         type: branch
-        flow: twoway:
+        flow: twoway
         level: surface
         stops:
         - "Makdaam's Junction"
